--- a/index.html
+++ b/index.html
@@ -4,49 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Table With Classses</title>
+
 <style>
-    * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-    }
-    table {
-        width: 800px;
-        height: auto;
-    }
-    .tr th,td{
+    table #thead, #tbody th {
         border: 2px solid black;
-        border-collapse: collapse;
-        padding: 10px;
-        text-align: center;
+        width: 50px;
+        height: 20px;
+        padding: 5px;
+        margin: 0px;
     }
-    .redbg{
-        background-color: red;
+    .green {
+        background-color: rgb(13, 228, 13);
     }
-    .greenbg {
-        background-color: green;
-        border: 2px solid black;
-        border-collapse: collapse;
-        padding: 10px;
-        text-align: center;
+    .red {
+        background-color: rgb(228, 13, 13);
     }
 </style>
 </head>
 <body>
+    
     <main>
-        <table id="table">
-            <tbody id="tbody">
-                <tr id="tr-head" class="tr">
-                    <th>Name</th>
-                    <th>Math</th>
-                    <th>physics</th>
-                    <th>js</th>
-                </tr>
-            </tbody>
+        <table>
+            <thead id="thead"></thead>
+            <tbody id="tbody"></tbody>
         </table>
+
+        <div id="Inputs">
+            <button id="addStudent">Add Student</button>
+        </div>
+        
     </main>
 
-<script src="./app.js" ></script>
+<script src="./app.js"></script>
 </body>
 </html>
